# Enterprise-Task-Automation-OpenENV

./: API_REFERENCE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  HACKATHON_SUBMISSION.md  LICENSE  PROJECT_SUMMARY.md  README.md  app.py  inference.py  launch_web.py  openenv.yaml  pyproject.toml  quickstart.py  requirements.txt  test_demo.py  validator.py
server/: app.py
src/: __init__.py  environment.py  graders.py  types.py
tasks/: __init__.py  easy.py  hard.py  medium.py
