[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-task-automation"
version = "0.1.0"
description = "OpenEnv-compatible environment for enterprise workflow automation"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
server = "server.app:main"
